# symengine.js

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build_wasm.sh
.github/workflows/: build.yml  pages.yml
cmake/: EmscriptenToolchain.cmake  Wasm32UnknownToolchain.cmake
docs/: book.toml
docs/src/: README.md  SUMMARY.md  rust-wasm-unknown.md
docs/src/advanced/: build-options.md  memory.md  threading.md  troubleshooting.md
docs/src/api/: constants.md  expressions.md  functions.md
docs/src/dynamic-linking/: cpp.md  overview.md  runtime.md  rust.md
docs/src/getting-started/: building.md  installation.md  quickstart.md
docs/src/usage/: browser.md  javascript.md  nodejs.md
examples/: browser.html  calculus.mjs  number-theory.mjs  symbolic.mjs  test.mjs
examples/rust-trunk/: Cargo.toml  build.rs  index.html  wasi_stub.c
examples/rust-trunk/src/: lib.rs  symengine.rs  symengine_ffi.rs
src/: bindings.cpp  symengine.d.ts
